--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-## Markdown Files 
-Thinking.md
-style-guide.md
-README-template.md
-README-Explanation.md
-
-## Specific Folders
+##Folders
 assets/
+
+##Markdown Files
+Thinking.md
+Explanation.md
+Template.md
+Guide.md
